--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id 'java'
     id 'application'
-    id 'com.adarshr.test-logger' version '3.0.0'
+    id 'com.adarshr.test-logger' version '3.2.0'
 }
 
 repositories {
@@ -12,11 +11,12 @@ wrapper {
     gradleVersion = '8.0.2'
 }
 
-sourceCompatibility = '17'
-
-group 'com.spotlight.platform'
-version '1.0.0-SNAPSHOT'
-mainClassName = 'com.spotlight.platform.userprofile.api.web.UserProfileApiApplication'
+application {
+    sourceCompatibility = '17'
+    group 'com.spotlight.platform'
+    version '1.0.0-SNAPSHOT'
+    mainClassName = 'com.spotlight.platform.userprofile.api.web.UserProfileApiApplication'
+}
 
 tasks.withType(JavaCompile) {
     options.compilerArgs << "-Werror" << '-Xlint:unchecked' // Will break the build on Java compiler warnings
@@ -31,8 +31,11 @@ test {
 }
 
 dependencies {
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
-    testImplementation 'org.assertj:assertj-core:3.19.0'
-    testImplementation 'org.mockito:mockito-core:3.10.0'
+    implementation platform('io.dropwizard:dropwizard-bom:2.1.6')
+    implementation 'io.dropwizard:dropwizard-testing'
+    implementation 'ru.vyarus:dropwizard-guicey:5.7.1'
+
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 }
