--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ application {
     mainClassName = 'com.spotlight.platform.userprofile.api.web.UserProfileApiApplication'
 }
 
-tasks.withType(JavaCompile) {
+compileJava {
     options.compilerArgs << "-Werror" << '-Xlint:unchecked' // Will break the build on Java compiler warnings
     options.deprecation = true
 }
@@ -37,5 +37,6 @@ dependencies {
 
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
 }
