--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
     testImplementation 'org.mockito:mockito-core:5.2.0'
     testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'net.javacrumbs.json-unit:json-unit:2.37.0'
+    testImplementation 'net.javacrumbs.json-unit:json-unit-assertj:2.37.0'
 }
