--- a/.github/workflows/github-actions-gradle-test.yml
+++ b/.github/workflows/github-actions-gradle-test.yml
@@ -14,8 +14,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action
+        uses: gradle/wrapper-validation-action@v1.0.6
       - name: Build with Gradle
-        uses: gradle/gradle-build-action
+        uses: gradle/gradle-build-action@v2.4.0
         with:
           arguments: test
