--- a/.github/workflows/github-actions-gradle-test.yml
+++ b/.github/workflows/github-actions-gradle-test.yml
@@ -3,7 +3,7 @@ name: Java CI
 on: [ push ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -18,4 +18,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2.4.0
         with:
-          arguments: test
+          arguments: build
