Running tests in parallel like there is no tomorrow

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,11 @@ test {
     testlogger {
         showStandardStreams = true
     }
+    systemProperties = [
+            'junit.jupiter.execution.parallel.enabled'             : 'true',
+            'junit.jupiter.execution.parallel.mode.classes.default': 'concurrent',
+            'junit.jupiter.execution.parallel.mode.default'        : 'concurrent'
+    ]
 }
 
 check {
